--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,16 @@ header .icone{
     padding-right: 8px;
 
 }
-nav, .btn{
-    margin: 1rem 0;
-    border-radius: 1rem;
+nav{
+    margin: 1rem 0 2rem 0;
+    box-shadow: 0 5px 5px blue, 0 -5px 5px blue;
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
     background-color: blue;
+}
+.btn{
+    margin: 1rem 0;
 }
 .btn-blue {
     background-color: blue;
